--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,20 +2,24 @@ name: Run PHP Script
 
 on:
   schedule:
-    - cron: '0 * * * *' # 每小时执行一次
+    - cron: '0 * * * *'
+  workflow_dispatch: # 允许手动触发
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - name: Checkout repository
+    - name: Checkout code
       uses: actions/checkout@v3
-    
-    - name: Setup PHP
+
+    - name: Set up PHP
       uses: shivammathur/setup-php@v2
       with:
         php-version: '7.4'
-    
+
     - name: Run PHP script
+      env:
+        ACCOUNTS: ${{ secrets.ACCOUNTS }}
+        TG_PUSH_KEY: ${{ secrets.TG_PUSH_KEY }}
       run: php index.php
